--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,14 +7,16 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+       
         <activity
-            android:name="io.flakstad.eggejakten.FirstActivity"
+            android:name=".FirstActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,8 +24,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity android:name=".SecondActivity" >
         </activity>
+        
+        <activity android:name=".FinalActivity" >
+        </activity>
+        
     </application>
 
 </manifest>
